# Sangeet-Nepal

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  docker-compose.yaml  entrypoint.sh  models.py  pyproject.toml  tortoise_config.py
sangeet_nepal/: __main__.py
sangeet_nepal/config/: __init__.py  bot.py  database.py  spotify.py
sangeet_nepal/core/: bot.py  lavalink_events.py
sangeet_nepal/core/plugins/: __init__.py  errors.py  misc.py  music.py  playlists.py
sangeet_nepal/core/utils/: spotify.py  time.py
