[tool.poetry]
name = "Sangeet Nepal"
version = "1.0.0"
description = "A music bot for Nepali Discord Servers that helps people to listen to Music better"
authors = ["Nishant Sapkota <snishant306@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
hikari = "^2.0.0.dev112"
hikari-lightbulb = "^2.2.5"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
hikari-miru = "^1.1.2"
lavasnek-rs = "^0.1.0a5"
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.0"}
aerich = "^0.6.3"
spotipy = "^2.19.0"
psutil = "^5.9.0"
lyricsgenius = "^3.0.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"


[tool.poetry.group.dev.dependencies]
black = {version = "21.12b0", allow-prereleases = true}

[tool.aerich]
tortoise_orm = "tortoise_config.tortoise_config"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
